--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,12 +14,13 @@
         android:id="@+id/recycle"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="21dp"
-        android:tint="#fff"
+        app:tint="#fff"
         android:backgroundTint="@color/purple_500"
         android:src="@drawable/baseline_add_24"
         android:contentDescription="@string/app_name"
