--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
+    android:backgroundTint="@color/black"
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
+        android:backgroundTint="@color/black"
         android:id="@+id/recycle"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -20,8 +22,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="21dp"
-        app:tint="#fff"
-        android:backgroundTint="@color/purple_500"
+        app:tint="#000000"
+        android:backgroundTint="@color/white"
         android:src="@drawable/baseline_add_24"
         android:contentDescription="@string/app_name"
          />
