--- a/app/src/main/res/layout/add_update.xml
+++ b/app/src/main/res/layout/add_update.xml
@@ -3,7 +3,7 @@
     android:layout_width="350dp"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/purple_200"
+    android:background="@color/black"
     android:paddingLeft="21dp"
     android:paddingRight="21dp"
     android:paddingBottom="11dp"
@@ -23,6 +23,7 @@
         android:background="#fff"
         android:padding="11dp"
         android:hint="Enter Number"
+        android:textColorHint="@color/black"
         android:inputType="number"
         android:id="@+id/editNumber"/>
     <EditText
@@ -32,6 +33,7 @@
         android:padding="11dp"
         android:layout_marginTop="10dp"
         android:hint="Enter Name"
+        android:textColorHint="@color/black"
         android:id="@+id/editName"/>
 
     <Button
@@ -40,7 +42,7 @@
         android:layout_height="55dp"
         android:backgroundTint="@color/white"
         android:text="Add"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/black"
         android:layout_marginTop="11dp"
         android:layout_gravity="end"
         android:textSize="15sp"/>
