--- a/app/src/main/res/layout/add_update.xml
+++ b/app/src/main/res/layout/add_update.xml
@@ -18,10 +18,12 @@
         android:textStyle="bold"
         android:layout_margin="21dp"/>
     <EditText
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#fff"
         android:padding="11dp"
+        android:textColor="@color/black"
         android:hint="Enter Number"
         android:textColorHint="@color/black"
         android:inputType="number"
@@ -33,6 +35,7 @@
         android:padding="11dp"
         android:layout_marginTop="10dp"
         android:hint="Enter Name"
+        android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:id="@+id/editName"/>
 
