--- a/app/src/main/res/layout/add_update.xml
+++ b/app/src/main/res/layout/add_update.xml
@@ -3,7 +3,7 @@
     android:layout_width="350dp"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="@color/black"
     android:paddingLeft="21dp"
     android:paddingRight="21dp"
     android:paddingBottom="11dp"
